--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,17 +7,30 @@
 <!-- * * * * * * * to get started with your project! * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
-<style>
-
-</style>
+<style></style>
 
 <main class="main">
-  <app-profile-picture profilePictureUrl="assets/profileImage.jpeg"></app-profile-picture>
-  <app-profile-picture size="large" profilePictureUrl="assets/profileImage.jpeg" [hasStory]="true"></app-profile-picture>
-  <app-profile-picture profilePictureUrl="assets/profileImage2.jpeg"></app-profile-picture>
-  <app-profile-picture size="large" profilePictureUrl="assets/profileImage2.jpeg"></app-profile-picture>
-  
+  <app-profile-picture
+    profilePictureUrl="assets/profileImage.jpeg"
+  ></app-profile-picture>
+  <app-profile-picture
+    size="large"
+    profilePictureUrl="assets/profileImage.jpeg"
+    [hasStory]="true"
+  ></app-profile-picture>
+  <app-profile-picture
+    profilePictureUrl="assets/profileImage2.jpeg"
+  ></app-profile-picture>
+  <app-profile-picture
+    size="large"
+    profilePictureUrl="assets/profileImage2.jpeg"
+  ></app-profile-picture>
+
   <app-story-banner></app-story-banner>
+  <!-- <div [style]="{ 'background-color': '#d0a741' }"> -->
+    <div [style]="{ 'background-color': 'white' }">
+    <app-slider-arrow></app-slider-arrow>
+  </div>
 </main>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
@@ -27,6 +40,5 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * End of Placeholder  * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-
 
 <router-outlet />
