--- a/src/app/tag/tag.component.html
+++ b/src/app/tag/tag.component.html
@@ -1,1 +1,3 @@
-<p>tag works!</p>
+@if (type === 'Certified') {
+    <img src="/assets/certified-icon.png" alt="certified" [width]="width" [height]="width">
+}
