--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,9 +28,12 @@
 
   <app-story-banner></app-story-banner>
   <!-- <div [style]="{ 'background-color': '#d0a741' }"> -->
-    <div [style]="{ 'background-color': 'white' }">
+  <div [style]="{ 'background-color': 'white' }">
     <app-slider-arrow></app-slider-arrow>
   </div>
+  <app-slide></app-slide>
+
+  <app-slider-carousel [visibleSlides]="1" type="picturePost" [slides]="slides"></app-slider-carousel>
 </main>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
