fix: delete redundancy of number of visible slides for slider carousel

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,7 +33,7 @@
   </div>
   <app-slide></app-slide>
 
-  <app-slider-carousel [visibleSlides]="1" type="picturePost" [slides]="slides"></app-slider-carousel>
+  <app-slider-carousel type="picturePost" [slides]="slides"></app-slider-carousel>
 </main>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
