fix: resolve conflict 1

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,6 +17,7 @@
   <app-profile-picture profilePictureUrl="assets/profileImage2.jpeg"></app-profile-picture>
   <app-profile-picture size="large" profilePictureUrl="assets/profileImage2.jpeg"></app-profile-picture>
   
+  <app-story-banner></app-story-banner>
 </main>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
