fix: type user has profilePhotoUrl

--- a/src/app/publication/publication-header/publication-header.component.html
+++ b/src/app/publication/publication-header/publication-header.component.html
@@ -6,7 +6,7 @@
                 <app-profile-picture 
                 size="small" 
                 [hasStory]="this.user.hasStory" 
-                [profilePictureUrl]="this.user.profilePictureUrl" 
+                [profilePhotoUrl]="this.user.profilePictureUrl" 
                 [viewedStory]='false'
                 />
             </div>
