fix: changed like number into a link

--- a/src/app/likes-statistics/likes-statistics.component.html
+++ b/src/app/likes-statistics/likes-statistics.component.html
@@ -1,7 +1,7 @@
 <div class="likes-container">
   <app-likes-pictures [whoLiked]="whoLiked"></app-likes-pictures>
 
-  <div>
-    <span class="likes-stat"> {{ getUKNumber() }} likes </span>
-  </div>
+  <a class="likes-stat">
+    {{ getUKNumber() }} likes
+  </a>
 </div>
