--- a/src/app/likes-statistics/likes-statistics.component.sass
+++ b/src/app/likes-statistics/likes-statistics.component.sass
@@ -7,4 +7,7 @@
         font-weight: 600
         font-size: 15.5px
         display: block
+        cursor: pointer
         
+    .likes-stat:active
+        color: grey
