Refonte des icones pour que ce soit un peu plus swaggy

--- a/src/app/general-components/text-buton/text-buton.component.html
+++ b/src/app/general-components/text-buton/text-buton.component.html
@@ -1,1 +1,2 @@
-<button (click)="handleClick()"><ng-content></ng-content></button>
+<button (click)="handleClick()" [ngClass]="{'text-blue': this.textColor==='blue', 'text-black': this.textColor==='black'}"><ng-content></ng-content></button>
+
