--- a/src/app/general-components/text-buton/text-buton.component.sass
+++ b/src/app/general-components/text-buton/text-buton.component.sass
@@ -5,12 +5,16 @@ button
     font: inherit
     cursor: pointer
     outline: inherit
-    color: inherit
     justify-self: center
     height: 18px
     display: flex
-    align-items: center
-    justify-content: center
 
 .text-blue
     color: #0095F6
+    &:hover
+        color: #01376B
+
+.text-black
+    color: black
+    &:hover
+        color: #C2C2C2
