--- a/src/app/navigation/navigation-bar/navigation-bar.component.html
+++ b/src/app/navigation/navigation-bar/navigation-bar.component.html
@@ -1,18 +1,18 @@
-<div class="navigation-bar">
+<nav>
     <div class="top-section">
         <img src="assets/instagram-logo.svg.png" alt="instagram-logo" width="50%" class="main-logo">
-        <app-navigation-button icon="Home" label="Home"></app-navigation-button>
-        <app-navigation-button icon="Search" label="Search"></app-navigation-button>
-        <app-navigation-button icon="Compass" label="Explore"></app-navigation-button>
-        <app-navigation-button icon="Video" label="Reels"></app-navigation-button>
-        <app-navigation-button icon="Send" label="Message"></app-navigation-button>
-        <app-navigation-button icon="Heart" label="Notifications"></app-navigation-button>
-        <app-navigation-button icon="Add" label="Create"></app-navigation-button>
+        <app-navigation-button iconType="Home" label="Home"></app-navigation-button>
+        <app-navigation-button iconType="Search" label="Search"></app-navigation-button>
+        <app-navigation-button iconType="Compass" label="Explore"></app-navigation-button>
+        <app-navigation-button iconType="Video" label="Reels"></app-navigation-button>
+        <app-navigation-button iconType="Send" label="Message"></app-navigation-button>
+        <app-navigation-button iconType="Heart" label="Notifications"></app-navigation-button>
+        <app-navigation-button iconType="Add" label="Create"></app-navigation-button>
     </div>
 
     <div class="bottom-section">
-        <app-navigation-button icon="Threads" label="Threads"></app-navigation-button>
-        <app-navigation-button icon="Menu" label="More"></app-navigation-button>
+        <app-navigation-button iconType="Threads" label="Threads"></app-navigation-button>
+        <app-navigation-button iconType="Burger" label="More"></app-navigation-button>
     </div>
     
-</div>
+</nav>
