--- a/src/app/navigation/navigation-button/navigation-button.component.html
+++ b/src/app/navigation/navigation-button/navigation-button.component.html
@@ -1,4 +1,4 @@
 <a href="" class="container">
-    <img [src]="getIconLink(this.icon)" alt="{{this.icon}}-icon">
+    <app-icon [iconType]="iconType" size="medium"></app-icon>
     {{label}}
 </a>
