--- a/src/app/navigation/navigation-button/navigation-button.component.sass
+++ b/src/app/navigation/navigation-button/navigation-button.component.sass
@@ -1,9 +1,9 @@
-a 
+a
     text-decoration: none
 
     &:visited
         color: inherit
-    
+
 .container
     height: 50px
     width: 225px
@@ -14,19 +14,14 @@ a
     font-size: 17px
     font-family: helvetica
 
-    img 
+    app-icon
         height: 22px
         margin-left: 20px
         margin-right: 20px
         transition: transform 0.1s ease-in-out
 
-
-    &:hover 
+    &:hover
         background-color: #F4F4F4
 
-        img
+        app-icon
             transform: scale(1.05)
-
-
-
-
