--- a/src/app/publication-caption/publication-caption.component.sass
+++ b/src/app/publication-caption/publication-caption.component.sass
@@ -19,6 +19,7 @@
 
     .username
         font-weight: 600
+        cursor: pointer
         
 .more-button
     background: none
@@ -26,5 +27,14 @@
     font-family: Helvetica
     font-size: 15.5px
     color: grey
+    padding: 0
+    cursor: pointer
+
+.translation
+    background: none
+    border: none
+    font-family: Helvetica
+    font-size: 12px
+    font-weight: 600
     padding: 0
     cursor: pointer
