--- a/src/app/publication/publication-header/publication-header.component.html
+++ b/src/app/publication/publication-header/publication-header.component.html
@@ -5,7 +5,7 @@
                 <app-profile-picture 
                 size="small" 
                 [hasStory]="this.user.hasStory" 
-                [profilePhotoUrl]="this.user.profilePictureUrl" 
+                [profilePictureUrl]="this.user.profilePhotoUrl" 
                 [viewedStory]='false'
                 />
             </div>
