--- a/src/app/publication-caption/publication-caption.component.html
+++ b/src/app/publication-caption/publication-caption.component.html
@@ -1,9 +1,16 @@
-<div #captionText [ngClass]="truncation">
-  <a class="username">{{ userName }}</a> {{ caption }}
+<div class="inline-text">
+  <div #captionText [ngClass]="truncation">
+    <a class="username">{{ userName }}</a>
+    <div class="content">{{ caption }}</div>
+  </div>
+  @if(needsTruncation()){
+  <div class="more-button" (click)="handleTruncation()">more</div>
+  <br />}
 </div>
-@if(needsTruncation()){
-<button class="more-button" (click)="handleTruncation()">more</button>
-<br/>}
 @if(!(language==='en' || language===null)){
-<button *ngIf="!isTranslated" class="translation" (click)="handleTranslation()">See translation</button>
-<button *ngIf="isTranslated" class="translation" (click)="handleTranslation()">See original</button>}
+<button *ngIf="!isTranslated" class="translation" (click)="handleTranslation()">
+  See translation
+</button>
+<button *ngIf="isTranslated" class="translation" (click)="handleTranslation()">
+  See original</button
+>}
