--- a/src/app/publication-caption/publication-caption.component.sass
+++ b/src/app/publication-caption/publication-caption.component.sass
@@ -1,4 +1,5 @@
-
+.inline-text
+    display: inline-block
 .caption
     font-family: Helvetica 
     font-size: 15.5px
@@ -6,21 +7,31 @@
     -webkit-box-orient: vertical
     -webkit-line-clamp: 2
     overflow: hidden
-    text-overflow: ellipsis 
-
+    text-overflow: ellipsis
+    
     .username
         font-weight: 600
         cursor: pointer
+        margin-right: 4px
+        display: inline
+
+.content
+    font-family: Helvetica 
+    font-size: 15.5px
+    display: inline
+    margin: 0
+    white-space: pre-wrap
         
 .caption--shown
     font-family: Helvetica 
     font-size: 15.5px
-    text-overflow: ellipsis 
+    text-overflow: ellipsis
 
     .username
         font-weight: 600
         cursor: pointer
-        
+        margin-right: 4px
+
 .more-button
     background: none
     border: none
@@ -29,6 +40,7 @@
     color: grey
     padding: 0
     cursor: pointer
+    display: inline-block
 
 .translation
     background: none
