--- a/src/app/publication-caption/publication-caption.component.html
+++ b/src/app/publication-caption/publication-caption.component.html
@@ -1,13 +1,10 @@
-<div class="inline-text">
-  <div #captionText [ngClass]="truncation">
-    <a class="username">{{ userName }}</a>
-    <div class="content">{{ caption }}</div>
-  </div>
-  @if(needsTruncation()){
-  <div class="more-button" (click)="handleTruncation()">more</div>
-  <br />}
+<div #captionText [ngClass]="truncation">
+  <a class="username">{{ userName }}</a>
+  <div class="content">{{ caption }}</div>
 </div>
-@if(!(language==='en' || language===null)){
+@if(needsTruncation()){
+<div class="more-button" (click)="handleTruncation()">more</div>
+<br />} @if(!(language==='en' || language===null)){
 <button *ngIf="!isTranslated" class="translation" (click)="handleTranslation()">
   See translation
 </button>
