--- a/src/app/general-components/icon-button/icon-button.component.html
+++ b/src/app/general-components/icon-button/icon-button.component.html
@@ -1,3 +1,3 @@
-<button [ngClass]="" (click)="handleClick()" (mouseenter)="this.handleMouseEnter()" (mouseleave)="this.handleMouseLeave()">
+<button [ngClass]="" (click)="handleClick($event)" (mouseenter)="this.handleMouseEnter()" (mouseleave)="this.handleMouseLeave()">
     <app-icon [iconType]="iconType" [size]="iconSize" [color]="currentIconColor" [bounce]="bounce"/>
 </button>
