fix: ui of submitting the comment

--- a/src/app/general-components/text-buton/text-buton.component.sass
+++ b/src/app/general-components/text-buton/text-buton.component.sass
@@ -13,6 +13,8 @@ button
     color: #0095F6
     &:hover
         color: #01376B
+    &:active
+        color: #01376Baa
 
 .text-black
     color: black
