--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -1,2 +1,24 @@
-.parent-feed
-    width: 468px
+.screen
+    display: flex
+    width: 100vw
+    height: 100vh
+
+.application
+    display: flex
+    margin-right: auto
+    margin-left: auto
+    padding-top: 22px
+
+    .main-section
+        width: 630px
+        height: auto
+
+        .feed-selector
+            display: block
+            margin-top: 33px
+            border-bottom: 1px solid #dbdbdb
+            margin-bottom: 25px
+
+    app-profile-section
+        padding-left: 64px
+        padding-top: 36px
