--- a/src/app/slide/slide.component.sass
+++ b/src/app/slide/slide.component.sass
@@ -5,14 +5,13 @@
     justify-content: space-between
     width: 66px
     height: 86px
-    
 
     .username
         font-family: Helvetica
         font-size: small
         max-width: 72px
         overflow: hidden
-        text-align: center
+        align-self: center
         text-overflow: ellipsis
 
 .picturePost
