--- a/src/app/profile-card/profile-card.component.html
+++ b/src/app/profile-card/profile-card.component.html
@@ -20,5 +20,5 @@
         }
     </div>
 
-    <app-text-buton>{{this.interactionButtonType}}</app-text-buton>
+    <app-text-buton textColor="blue">{{this.interactionButtonType}}</app-text-buton>
 </div>
