--- a/src/app/publication-caption/publication-caption.component.sass
+++ b/src/app/publication-caption/publication-caption.component.sass
@@ -1,6 +1,6 @@
 .caption
     font-family: Helvetica 
-    font-size: 15.5px
+    font-size: 14px
     display: -webkit-box
     -webkit-box-orient: vertical
     -webkit-line-clamp: 2
@@ -8,21 +8,25 @@
     text-overflow: ellipsis
     
     .username
-        font-weight: 600
-        cursor: pointer
-        margin-right: 4px
-        display: inline
+        display: inline-flex
+        height: 18px
+        margin-right: 2px
+        a
+            font-weight: 600
+            cursor: pointer
+            margin-right: 4px
+            display: inline
 
 .content
     font-family: Helvetica 
-    font-size: 15.5px
+    font-size: 14px
     display: inline
     margin: 0
     white-space: pre-wrap
         
 .caption--shown
     font-family: Helvetica 
-    font-size: 15.5px
+    font-size: 14px
     text-overflow: ellipsis
 
     .username
@@ -34,7 +38,7 @@
     background: none
     border: none
     font-family: Helvetica
-    font-size: 15.5px
+    font-size: 14px
     color: grey
     padding: 0
     cursor: pointer
