--- a/src/app/slide/slide.component.sass
+++ b/src/app/slide/slide.component.sass
@@ -17,5 +17,6 @@
 .picturePost
     width: 468px
     height: 468px
+    border-radius: 2px
     background-size: cover
     background-position: center
