--- a/src/app/slider-carousel/slider-carousel.component.sass
+++ b/src/app/slider-carousel/slider-carousel.component.sass
@@ -2,6 +2,8 @@
     position: relative
     width: 468px
     height: 468px
+    border: solid 1px #DBDBDB
+    border-radius: 3px
 
     .left-arrow
         position: absolute
