--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="screen">
-  <app-navigation-bar />
+  <app-navigation-bar [userProfilePhotoUrl]="this.activeUser.profilePhotoUrl"/>
 
   <div class="application">
     <div class="main-section">
