--- a/src/app/general-components/icon/icon.component.html
+++ b/src/app/general-components/icon/icon.component.html
@@ -158,4 +158,13 @@
             </path>
         </svg>
     }
+    @case ('Search-Filled') {
+        <svg [ngClass]="{'bouncing': bounce}" [attr.fill]="color" [attr.height]="width" role="img" viewBox="0 0 24 24"
+            [attr.width]="width">
+            <path d="M18.5 10.5a8 8 0 1 1-8-8 8 8 0 0 1 8 8Z" fill="none" [attr.stroke]="color" stroke-linecap="round"
+                stroke-linejoin="round" stroke-width="3"></path>
+            <line fill="none" [attr.stroke]="color" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" x1="16.511"
+                x2="21.643" y1="16.511" y2="21.643"></line>
+        </svg>
+    }
 }
