--- a/src/app/navigation/navigation-button/navigation-button.component.sass
+++ b/src/app/navigation/navigation-button/navigation-button.component.sass
@@ -25,3 +25,14 @@ a
 
         app-icon
             transform: scale(1.05)
+
+    app-profile-picture
+        margin-left: 7px
+        margin-right: 10px
+        transition: transform 0.1s ease-in-out
+
+    &:hover
+        background-color: #F4F4F4
+
+        app-profile-picture
+            transform: scale(1.05)
