fix cursor on nav buttons

--- a/src/app/navigation/navigation-button/navigation-button.component.sass
+++ b/src/app/navigation/navigation-button/navigation-button.component.sass
@@ -33,6 +33,8 @@ a
 
     &:hover
         background-color: #F4F4F4
+        cursor: pointer
 
         app-profile-picture
             transform: scale(1.05)
+
