fix: coherent caption when pushing more button

--- a/src/app/publication/publication-caption/publication-caption.component.html
+++ b/src/app/publication/publication-caption/publication-caption.component.html
@@ -9,10 +9,12 @@
 </div>
 @if(needsTruncation()){
 <div class="more-button" (click)="handleTruncation()">more</div>
-<br />} @if(!(language==='en' || language===null)){
+<br />} 
+@if(!(language==='en' || language===null)){
 <button *ngIf="!isTranslated" class="translation" (click)="handleTranslation()">
   See translation
 </button>
+
 <button *ngIf="isTranslated" class="translation" (click)="handleTranslation()">
   See original</button
 >}
